# dprint-oxfmx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: configuration.rs  handler.rs  lib.rs  main.rs  mock_worker.rs  runtime_locator.rs  worker_manager.rs  worker_protocol.rs
deployment/: plugin.template.json
docs/adr/: 0001-pinned-dprint-core-api.md  0002-node-runtime-distribution.md
runtime/: package.json  pnpm-lock.yaml  tsconfig.json
runtime/src/: oracle.ts  protocol.test.ts  protocol.ts  worker.test.ts  worker.ts
schema/: plugin.schema.json
scripts/: package.sh  release-common.sh  smoke-dprint-cli.sh
tests/fixtures/basic/: javascript.expected.js  javascript.input.js  single-quote.expected.ts  single-quote.input.ts  typescript.expected.ts  typescript.input.ts
tests/fixtures/errors/: syntax-error.input.ts
tests/fixtures/protocol/: messages.json
