[package]
name = "dprint-plugin-oxfmt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
dprint-core = { version = "=0.68.2", default-features = false, features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["io-util", "net", "process", "rt", "sync", "time"] }

[lints]
workspace = true
